# calculator-c

./: CMakeLists.txt  Makefile  README.md
lib/: expression_parser.h
src/: expression_parser.c  main.c
